<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".EditProfileFragment">
<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView

        android:id="@+id/imagev"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:src="@drawable/ic_iconss"
        android:background="@drawable/dumo"
        android:padding="17dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_margin="24dp" />
    <TextView
        android:id="@+id/text8"
        android:layout_width="wrap_content"
        android:layout_height="19dp"
        android:layout_marginStart="162dp"
        android:layout_marginTop="38dp"
        android:layout_marginEnd="161dp"
        android:text="Edit Profile"
        android:textColor="#252B5C"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

   <de.hdodenhof.circleimageview.CircleImageView
       android:id="@+id/circleimage"
       android:layout_width="100dp"
       android:layout_height="100dp"
       android:src="@drawable/assss"
       android:layout_marginTop="34dp"
       app:shapeAppearanceOverlay="@drawable/assss"
       app:layout_constraintEnd_toEndOf="parent"
       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintTop_toBottomOf="@id/text8"/>
    <com.google.android.material.button.MaterialButton
        android:id="@+id/addvilla"
        android:layout_width="327dp"
        android:layout_height="70dp"
        android:text="@string/jonathon_anderson"
        android:paddingEnd="150dp"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="30dp"
        app:iconSize="30dp"
        android:backgroundTint="#EDEDED"
        android:textAllCaps="false"
        android:textColor="#042378"
        app:cornerRadius="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/circleimage"
        tools:ignore="RtlSymmetry" />
    <com.google.android.material.button.MaterialButton
        android:id="@+id/addvilla1"
        android:layout_width="327dp"
        android:layout_height="70dp"
        android:text="@string/_62_112_3288_9111"
        android:paddingEnd="150dp"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="30dp"
        app:iconSize="30dp"
        android:backgroundTint="#EDEDED"
        android:textAllCaps="false"
        android:textColor="#042378"
        app:cornerRadius="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/addvilla"
        tools:ignore="RtlSymmetry" />
    <com.google.android.material.button.MaterialButton
        android:id="@+id/addvilla2"
        android:layout_width="327dp"
        android:layout_height="70dp"
        android:text="@string/jonathan_email_com"
        android:paddingEnd="150dp"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="30dp"
        app:iconSize="30dp"
        android:backgroundTint="#EDEDED"
        android:textAllCaps="false"
        android:textColor="#042378"
        app:cornerRadius="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/addvilla1"
        tools:ignore="RtlSymmetry" />
    <com.google.android.material.button.MaterialButton
        android:layout_width="327dp"
        android:layout_height="60dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="164dp"
        android:layout_marginEnd="24dp"
        android:backgroundTint="#1E2038"
        android:gravity="center"
        android:paddingStart="100dp"
        android:text="Save"
        android:textAllCaps="false"
        app:cornerRadius="20dp"
        android:paddingEnd="120dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/addvilla2"/>




</androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>